# bbr_ros2

./: .dockerignore  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  batches.intkey  package.xml  plugin_description.xml
.circleci/: Dockerfile  config.yml
.dockerhub/: Dockerfile
bbr_cli/: Cargo.toml  Dockerfile  build.rs  proto
bbr_cli/migrations/create_tabels/: down.sql  up.sql
bbr_cli/src/: cli.rs  lib.rs  main.rs  schema.rs
bbr_cli/src/api/: mod.rs
bbr_cli/src/api/hmacsha256/: mod.rs
bbr_cli/src/cli/: mod.rs
bbr_cli/src/cli/bag/: mod.rs
bbr_cli/src/cli/completions/: mod.rs
bbr_cli/src/models/: message.rs  meta.rs  mod.rs  topic.rs
bbr_cli/src/proto/: .gitignore
bbr_common/: CMakeLists.txt  bbr_common-extras.cmake  package.xml
bbr_common/cmake/: bbr_package.cmake
bbr_msgs/: CMakeLists.txt  package.xml
bbr_msgs/msg/: Checkpoint.msg  CheckpointArray.msg  Record.msg  RecordArray.msg
bbr_msgs/srv/: CreateRecord.srv  CreateRecords.srv
bbr_protobuf/: CMakeLists.txt  package.xml
bbr_protobuf/proto/bbr/: hash.proto
bbr_rosbag2_storage_plugin/: CHANGELOG.rst  CMakeLists.txt  Dockerfile  package.xml  plugin_description.xml
bbr_rosbag2_storage_plugin/include/bbr_rosbag2_storage_plugin/bbr/: bbr_helper.hpp  bbr_node.hpp  bbr_storage.hpp
bbr_rosbag2_storage_plugin/src/bbr_rosbag2_storage_plugin/bbr/: bbr_helper.cpp  bbr_node.cpp  bbr_storage.cpp
bbr_sawtooth_bridge/: CMakeLists.txt  hex_key_to_pem.sh  package.xml  setup.cfg  setup.py
bbr_sawtooth_bridge/bbr_sawtooth_bridge/: bridge.py  main.py
bbr_sawtooth_bridge/include/bbr_sawtooth_bridge/: bridge_node.hpp  bridge_sender.hpp  bridge_signer.hpp
bbr_sawtooth_bridge/launch/: batcher_key.txt  bridge.launch.py  params.yaml  rest_bridge.launch.py  signer_key.txt
bbr_sawtooth_bridge/src/bbr_sawtooth_bridge/: bridge_main.cpp  bridge_node.cpp  bridge_sender.cpp  bridge_signer.cpp  demo_main.cpp  main.cpp  rest_main.cpp
bbr_sawtooth_protobuf/: CMakeLists.txt  package.xml
bbr_sawtooth_protobuf/proto/: property.proto
include/rosbag2_storage_bbr_plugin/bbr/: bbr_helper.hpp  bbr_node.hpp
include/rosbag2_storage_checkpoint_plugin/checkpoint/: checkpoint_helper.hpp  checkpoint_node.hpp  checkpoint_storage.hpp
rosbag2_storage_bbr_plugin/: CHANGELOG.rst  CMakeLists.txt  Dockerfile  package.xml
rosbag2_storage_bbr_plugin/include/rosbag2_storage_bbr_plugin/bbr/: bbr_node.hpp  bbr_storage.hpp
rosbag2_storage_bbr_plugin/src/rosbag2_storage_bbr_plugin/bbr/: bbr_node.cpp  bbr_storage.cpp
src/rosbag2_storage_bbr_plugin/bbr/: bbr_helper.cpp  bbr_node.cpp  bbr_storage.cpp
src/rosbag2_storage_checkpoint_plugin/checkpoint/: checkpoint_helper.cpp  checkpoint_node.cpp  checkpoint_storage.cpp
