[package]
name = "bbr_cli"
version = "0.1.0"
authors = ["ruffsl <roxfoxpox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
structopt = "0.3.2"
failure = "0.1.5"
exitfailure = "0.5.1"
hmac = "0.7.1"
sha2 = "0.8.0"
sodiumoxide = "0.2.4"
