[package]
name = "bbr_cli"
version = "0.1.0"
authors = ["ruffsl <roxfoxpox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
structopt = "0.3.2"
failure = "0.1.5"
exitfailure = "0.5.1"
sodiumoxide = "0.2.4"
chrono = "0.4.9"
protobuf = "2.8.1"

[build-dependencies]
protoc-rust = "2.8.1"
glob = "0.3.0"
