<?xml version="1.0"?>
<package format="2">
  <name>bbr_sawtooth_protobuf</name>
  <version>0.0.1</version>
  <description>Sawtooth Protobuf library for BBR</description>
  <maintainer email="roxfoxpox@gmail.com">Ruffin White</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>bbr_common</build_depend>

  <depend>protobuf-dev</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
